--- a/3DMuseum/.hintrc
+++ b/3DMuseum/.hintrc
@@ -23,6 +23,15 @@
         "image-alt": "off"
       }
     ],
-    "no-inline-styles": "off"
+    "no-inline-styles": "off",
+    "compat-api/css": [
+      "default",
+      {
+        "ignore": [
+          "scrollbar-width",
+          "scrollbar-width: none"
+        ]
+      }
+    ]
   }
 }
